--- a/web/index.html
+++ b/web/index.html
@@ -127,7 +127,7 @@
                             <div class="input-group date" style="width: 90%">
                                 <input type="text" id="pickUpDate" class="form-control" placeholder="Pickup date" required/>
                                 <span class="input-group-addon bg-dark"><i class="glyphicon glyphicon-calendar text-white"></i></span>
-                                <p><small id="errorPickupDate" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                                <p><small id="errorPickupDate" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                             <label class="form-label text-white" for="pickUpTime"  style="font-size: 15px;">At what time will I pickup you</label>
                             <div style="position: relative;width: 90%" >
                                 <input class="form-control" type="text" id="pickUpTime" placeholder="Pickup time" required/>
-                                <p><small id="errorPickupTime" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                                <p><small id="errorPickupTime" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             <div class="input-group date" style="width: 90%">
                                 <input type="text" id="returnDate" class="form-control" placeholder="Return date" required/>
                                 <span class="input-group-addon bg-dark"><i class="glyphicon glyphicon-calendar text-white"></i></span>
-                                <p><small id="errorReturnDate" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                                <p><small id="errorReturnDate" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             <label class="form-label text-white" for="returnTime"  style="font-size: 15px">At what time will I drop you off</label>
                             <div style="position: relative;width: 90%" >
                                 <input class="form-control" type="text" id="returnTime" placeholder="Return time" required/>
-                                <p><small id="errorReturnTime" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                                <p><small id="errorReturnTime" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         <div class="form-outline me-5">
                             <label class="form-label text-white" for="pickUpLocation">Where I pick you</label>
                             <input type="text" id="pickUpLocation" class="form-control" placeholder="Your pickup location"/>
-                            <p><small id="errorPickupLocation" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                            <p><small id="errorPickupLocation" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
 
@@ -179,7 +179,7 @@
                         <div class="form-outline me-5">
                             <label class="form-label text-white" for="returnLocation">Where I drop you off</label>
                             <input type="text" id="returnLocation" class="form-control" placeholder="Your drop-off location"/>
-                            <p><small id="errorReturnLocation" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                            <p><small id="errorReturnLocation" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
 
@@ -187,7 +187,7 @@
                         <div class="form-outline me-5">
                             <label class="form-label text-white" for="destination">Where you go</label>
                             <input type="text" id="destination" class="form-control" placeholder="Your destination"/>
-                            <p><small id="errorDestination" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                            <p><small id="errorDestination" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
 
@@ -195,7 +195,7 @@
                         <div class="form-outline me-5">
                             <label class="form-label text-white" for="duration">How far</label>
                             <input type="text" id="duration" class="form-control" placeholder="Journey duration"/>
-                            <p><small id="errorDuration" class="text-white bg-danger rounded rounded-3 rounded-pill pl-1 mt-0 mb-0"></small></p>
+                            <p><small id="errorDuration" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
 
@@ -203,7 +203,7 @@
 
                 <div class="row mt-5 ">
                     <div class="text-center">
-                        <button type="button" id="btnSearchForRent" class="btn btn-primary btn-rounded w-25">SEARCH</button>
+                        <button type="button" id="btnSearchForRent" class="btn btn-primary btn-rounded w-25" disabled>SEARCH</button>
                     </div>
                 </div>
             </form>
@@ -346,14 +346,15 @@
             <div class="row mt-0">
 
                 <div class="col">
-                    <form class="ms-5 me-5" style="position: relative; top: 50px;">
+                    <form id="customerForm" class="ms-5 me-5" style="position: relative; top: 50px;">
 
                         <div class="row">
                             <div class="col">
                                 <!-- username input -->
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="text" id="username" class="form-control  border border-2 border-white bg-light rounded-3" />
-                                    <label class="form-label text-black fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                                    <label class="form-label text-black fw-light" for="username" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                                    <p><small id="errorUsername" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
 
@@ -361,7 +362,8 @@
                                 <!-- Password input -->
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="password" id="password" class="form-control  border border-2 border-white bg-light" />
-                                    <label class="form-label text-black fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                                    <label class="form-label text-black fw-light" for="password" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                                    <p><small id="errorPassword" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -372,6 +374,7 @@
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="text" id="customername" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="customername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Full Name</label>
+                                    <p><small id="errorFullName" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                             <div class="col">
@@ -379,6 +382,7 @@
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="tel" id="contactnumber" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="contactnumber" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Contact</label>
+                                    <p><small id="errorContact" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -389,6 +393,7 @@
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="text" id="customeraddress" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="customeraddress" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Address</label>
+                                    <p><small id="errorAddress" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -399,6 +404,7 @@
                                 <div class="form-outline mb-2 ms-4 me-4">
                                     <input type="email" id="email" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="email" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Email</label>
+                                    <p><small id="errorEmail" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -409,6 +415,7 @@
                                 <div class="form-outline  ms-4 me-4 mb-4">
                                     <input type="text" id="nic" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="nic" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">NIC</label>
+                                    <p><small id="errorNIC" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                             <div class="col">
@@ -416,6 +423,7 @@
                                 <div class="form-outline ms-4 me-4 mb-4">
                                     <input type="text" id="drivinglicense" class="form-control  border border-2 border-white bg-light rounded-3" />
                                     <label class="form-label text-black fw-light" for="drivinglicense" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Driving License NO</label>
+                                    <p><small id="errorDrivingLicense" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -457,8 +465,8 @@
 
             <div class="row  mt-4">
                 <div class="form-check mb-md-0 mt-5 ms-5 checkbox-inline text-center">
-                    <label class="form-check-label mt-2 checkbox-inline text-black" for="loginCheck">
-                        <input class="form-check-input" type="checkbox" value="" id="loginCheck" />
+                    <input class="form-check-input" type="checkbox" value="" id="loginCheck"  required/>
+                    <label class="form-check-label mt-1 checkbox-inline text-black" for="loginCheck">
                         Accept the <a href="#" class="text-primary stretched-link">Terms and Conditions </a>
                     </label>
                 </div>
@@ -467,11 +475,14 @@
             <div class="row">
                 <div class="mb-4 me-5 ms-5  text-center">
                     <!-- Submit button -->
-                    <button type="button"  class="btn btn-block text-center text-white btn-warning shadow btnRegister" style="display: inline;position: relative;right: 0; top: 20px;margin: auto;width: 50%;">Register</button>
+                    <button type="button"  class="btn btn-block text-center text-white btn-warning shadow" id="btnRegister" style="display: inline;position: relative;right: 0; top: 20px;margin: auto;width: 50%;" disabled>
+                        Register
+                    </button>
+                   <!-- <input type="text" id="generateCusId" class="form-control  " />-->
                 </div>
 
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="position: relative;left: -25px;top: 0;">
-                    <button type="button" class="btn btn-danger text-end btnRegister">Cancel</button>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="position: relative;left: -25px;top: -15px;">
+                    <button type="button" class="btn btn-danger text-end btnRegisterCancel">Cancel</button>
                 </div>
             </div>
 
@@ -4540,7 +4551,8 @@
 
 <script src="controllers/DashBoardController.js"></script>
 <script src="controllers/AdminController.js"></script>
-<!--<script src="controllers/RegisterController.js"></script>-->
+<script src="controllers/HomeController.js"></script>
+<script src="controllers/RegisterController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
