successfully registered user

--- a/web/index.html
+++ b/web/index.html
@@ -478,7 +478,7 @@
                     <button type="button"  class="btn btn-block text-center text-white btn-warning shadow" id="btnRegister" style="display: inline;position: relative;right: 0; top: 20px;margin: auto;width: 50%;" disabled>
                         Register
                     </button>
-                   <!-- <input type="text" id="generateCusId" class="form-control  " />-->
+                    <label class="form-label text-danger" id="generateCusId">ff</label>
                 </div>
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="position: relative;left: -25px;top: -15px;">
