--- a/web/index.html
+++ b/web/index.html
@@ -253,7 +253,7 @@
 
                     <div class="mb-4  me-5 ms-5">
                         <!-- Submit button -->
-                        <button type="button" id="btnLogToSystem" class="btn btn-block text-center text-white btn-primary shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
+                        <button type="button" id="btnLogToSystem" class="btn btn-block text-center text-white btn-primary shadow" disabled style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
 
                     </div>
 
@@ -478,7 +478,8 @@
                     <button type="button"  class="btn btn-block text-center text-white btn-warning shadow" id="btnRegister" style="display: inline;position: relative;right: 0; top: 20px;margin: auto;width: 50%;" disabled>
                         Register
                     </button>
-                    <label class="form-label text-danger" id="generateCusId">ff</label>
+                    <label class="form-label text-danger visually-hidden" id="generateCusId"></label>
+                    <label class="form-label text-danger visually-hidden" id="generateUserId"></label>
                 </div>
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="position: relative;left: -25px;top: -15px;">
@@ -2922,7 +2923,7 @@
 
             <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto"  class="table-responsive text-nowrap">
 
-                <table class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
+                <table id="tblCustomers" class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Registered Date</th>
@@ -2935,143 +2936,10 @@
                         <th>Customer Driving Licence NO</th>
                         <th>NIC Image</th>
                         <th>Driving Licence Image</th>
-                        <th>Update</th>
-                        <th>Delete</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                           2022-12-21
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            Harshana Perera
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            071-8220009
-                        </td>
-                        <td>885963214v</td>
-                        <td>DR-GT1524889</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            Harshana Perera
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            071-8220009
-                        </td>
-                        <td>885963214v</td>
-                        <td>DR-GT1524889</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            Harshana Perera
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            071-8220009
-                        </td>
-                        <td>885963214v</td>
-                        <td>DR-GT1524889</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
+
                     </tbody>
                 </table>
 
@@ -4553,6 +4421,7 @@
 <script src="controllers/AdminController.js"></script>
 <script src="controllers/HomeController.js"></script>
 <script src="controllers/RegisterController.js"></script>
+<script src="controllers/LoginController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
