--- a/web/index.html
+++ b/web/index.html
@@ -253,7 +253,7 @@
 
                     <div class="mb-4  me-5 ms-5">
                         <!-- Submit button -->
-                        <button type="button" id="btnLogToSystem" class="btn btn-block text-center text-white btn-primary shadow" disabled style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
+                        <button type="button" id="btnLogToSystem" class="btn btn-block text-center text-white btn-primary shadow"  style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Log in</button>
 
                     </div>
 
@@ -2488,6 +2488,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="registrationNo">* Registration NO</label>
                                 <input type="text" id="registrationNo" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorRegNo" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col">
@@ -2517,6 +2518,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="noOfPassengers">* NO Of Passenagers</label>
                                 <input type="number" id="noOfPassengers" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorPassengers" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -2527,6 +2529,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="dailyRatePrice">* Daily Rate Price</label>
                                 <input type="text" id="dailyRatePrice" class="form-control bg-white rounded-3" />
+                                <p><small id="errorDailyRate" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col">
@@ -2534,6 +2537,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="monthlyRatePrice">* Monthly Rate Price</label>
                                 <input type="text" id="monthlyRatePrice" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorMonthlyRate" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col">
@@ -2541,6 +2545,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="freeKMPerDay">* Free KM Per Day</label>
                                 <input type="number" id="freeKMPerDay" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorFeeKMDay" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col">
@@ -2548,6 +2553,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="freeKMPerMonth">* Free KM Per Month</label>
                                 <input type="number" id="freeKMPerMonth" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorFreeKMMonth" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                     </div>
@@ -2558,6 +2564,7 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="priceForExtraKM">* Price For Extra KM</label>
                                 <input type="text" id="priceForExtraKM" class="form-control  bg-white rounded-3" />
+                                <p><small id="errorExtraKMPrice" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col">
@@ -2585,7 +2592,7 @@
                         <div class="col">
                             <!-- under maintain or not -->
                             <div class="form-outline mb-2 ms-4 me-4">
-                                <label class="form-label text-dark fw-light fs-4" for="availableOrNot">* Under Maintain Or Not</label>
+                                <label class="form-label text-dark fw-light fs-4" for="underMaintainOrNot">* Under Maintain Or Not</label>
                                 <select aria-label="Default select example" class="form-select fs-5" style="height: 38px" id="underMaintainOrNot">
                                     <option selected value="0">None</option>
                                     <option value="1">Maintained</option>
@@ -2600,7 +2607,8 @@
                             <!-- total distance travelled -->
                             <div class="form-outline ms-4 me-4">
                                 <label class="form-label text-dark fw-light fs-4" for="totalDistanceTravelled">* Total Distance Travelled</label>
-                                <input type="number" id="totalDistanceTravelled" class="form-control  border border-2 border-white bg-white rounded-3" />
+                                <input type="number" id="totalDistanceTravelled" class="form-control bg-white rounded-3" />
+                                <p><small id="errorTotalDistance" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                             </div>
                         </div>
                         <div class="col"></div>
@@ -2648,10 +2656,10 @@
                         </div>
                         <div class="col text-center mt-5">
                             <div class="col">
-                                <button type="button" class="btn btn-success btn-lg btn-floating ms-2 me-2 shadow">
+                                <button type="button" class="btn btn-success btn-lg btn-floating ms-2 me-2 shadow" id="btnUpdateCar">
                                     <i class="fas fa-pen-alt"></i>
                                 </button>
-                                <button type="button" class="btn btn-info btn-lg btn-floating ms-2 me-2 shadow">
+                                <button type="button" class="btn btn-info btn-lg btn-floating ms-2 me-2 shadow" id="btnAddNewCar">
                                     <i class="fas fa-plus"></i>
                                 </button>
                                 <button type="button" class="btn btn-danger btn-lg btn-floating ms-2 me-2 shadow" id="btnCancelAddCar">
@@ -4411,6 +4419,156 @@
         </div>
     </section>
 
+    <!--View Schedule For Driver-->
+    <section id="SchedulePageForDriver" style="width: 100%; height: 100vh ;">
+
+        <div >
+            <button class="btn btn-outline-info border border-2 border-info mt-5 ms-5" id="btnLogOutFromDriverSchedule">Log Out</button>
+
+            <div class="text-center" style="position: relative;top: 10px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif;">Schedule</h1>
+            </div>
+
+            <div class="" style="position: relative;top: 50px;left: 20px;width: 500px">
+                <h1 class="mt-1 fw-light" style="font-family: 'PT Serif', serif; font-size: 25px">
+                    <i class="fas fa-list-ul"></i>
+                    Schedule Details
+                </h1>
+            </div>
+
+            <div style="width: 98vw; height: 61vh;position: relative; top: 80px;right: 0;bottom: 0;left: 0;margin: auto">
+
+                <table class="table align-middle mb-0 bg-white table  " style="position: relative;left: 0;top: 0">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>Schedule Id</th>
+                        <th>Reserve Id</th>
+                        <th>Car Id</th>
+                        <th>Driver Id</th>
+                        <th>Pickup Date</th>
+                        <th>Pickup Time</th>
+                        <th>Pickup Venue</th>
+                        <th>Return Date</th>
+                        <th>Return Time</th>
+                        <th>Return Venue</th>
+                        <th>Release Or Not</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            S00-0001
+                        </td>
+                        <td>
+                            R00-0001
+                        </td>
+                        <td>
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            10.23
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            14.03
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            S00-0001
+                        </td>
+                        <td>
+                            R00-0001
+                        </td>
+                        <td>
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            10.23
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            14.03
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            S00-0001
+                        </td>
+                        <td>
+                            R00-0001
+                        </td>
+                        <td>
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            10.23
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            2022-12-21
+                        </td>
+                        <td>
+                            14.03
+                        </td>
+                        <td>
+                            Galle
+                        </td>
+                        <td>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
 </main>
 
@@ -4422,6 +4580,7 @@
 <script src="controllers/HomeController.js"></script>
 <script src="controllers/RegisterController.js"></script>
 <script src="controllers/LoginController.js"></script>
+<script src="controllers/CarController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
